Updated paths and fixed issues with map and mission data

--- a/Pages/MainPage.html
+++ b/Pages/MainPage.html
@@ -43,6 +43,7 @@
             </div>
         </div>
 
+        <!-- Trying New UI -->
         <div class="view_tab">
             <h1>
                 <span class="clickable" onclick="selectTab(1)">Product View</span> |
